--- a/include/include.html
+++ b/include/include.html
@@ -42,20 +42,20 @@
     <meta name="viewport" content="width=1260">
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="naver-site-verification" content="823ff8b8e7e3eb396c310703c2bbd731f48c1d9b" />
-    <link rel="stylesheet" href="/css/common.css" />
-    <link href="/css/hover.css" rel="stylesheet" media="all">
-    <link rel="stylesheet" href="/js/jquery.raty.css" />
-    <script type="text/javascript" src="/js/jquery-latest.js"></script>
-    <script type="text/javascript" src="/js/jquery-ui.js"></script>
-    <script type="text/javascript" src="/js/jquery.event.drag-1.5.min.js"></script>
-    <script type="text/javascript" src="/js/jquery.touchSlider.js"></script>
-    <script type="text/javascript" src="/js/jquery.raty.js"></script>
-    <script type="text/javascript" src="/js/main.js"></script>
-    <script type="text/javascript" src="/lib/cheditor/cheditor.js"></script>
-    <script type="text/javascript" src="/js/jquery.ui.datepicker-ko.js"></script>
-    <script type="text/javascript" src="/js/engine.js"></script>
+    <link rel="stylesheet" href="../css/common.css?v=<%=System.currentTimeMillis() %>" />
+    <link href="../css/hover.css" rel="stylesheet" media="all">
+    <link rel="stylesheet" href="../js/jquery.raty.css?v=<%=System.currentTimeMillis() %>" />
+    <script type="text/javascript" src="../js/jquery-latest.js?v=<%=System.currentTimeMillis() %>"></script>
+    <script type="text/javascript" src="../js/jquery-ui.js?v=<%=System.currentTimeMillis() %>"></script>
+    <script type="text/javascript" src="../js/jquery.event.drag-1.5.min.js?v=<%=System.currentTimeMillis() %>"></script>
+    <script type="text/javascript" src="../js/jquery.touchSlider.js?v=<%=System.currentTimeMillis() %>"></script>
+    <script type="text/javascript" src="../js/jquery.raty.js?v=<%=System.currentTimeMillis() %>"></script>
+    <script type="text/javascript" src="../js/main.js?v=<%=System.currentTimeMillis() %>"></script>
+    <script type="text/javascript" src="../lib/cheditor/cheditor.js?v=<%=System.currentTimeMillis() %>"></script>
+    <script type="text/javascript" src="../js/jquery.ui.datepicker-ko.js?v=<%=System.currentTimeMillis() %>"></script>
+    <script type="text/javascript" src="../js/engine.js?v=<%=System.currentTimeMillis() %>"></script>
 
-    <!-- Start of hanbithelp Zendesk Widget script -->
+    <!-- Start of help Widget script -->
     <script>
         /*<![CDATA[*/
         window.zEmbed || function(e, t) {
@@ -77,70 +77,18 @@
         /*]]>*/
 
     </script>
-    <!-- End of hanbithelp Zendesk Widget script -->
-
-    <!-- Google Analytics -->
-    <script>
-        (function(i, s, o, g, r, a, m) {
-            i['GoogleAnalyticsObject'] = r;
-            i[r] = i[r] || function() {
-                (i[r].q = i[r].q || []).push(arguments)
-            }, i[r].l = 1 * new Date();
-            a = s.createElement(o),
-                m = s.getElementsByTagName(o)[0];
-            a.async = 1;
-            a.src = g;
-            m.parentNode.insertBefore(a, m)
-        })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
-        ga('create', 'UA-47080738-1', 'hanbit.co.kr');
-        ga('require', 'linkid', 'linkid.js');
-        ga('send', 'pageview');
-
-    </script>
-    <!-- Google Analytics -->
-
-    <!-- Facebook Pixel Code -->
-    <script>
-        ! function(f, b, e, v, n, t, s) {
-            if (f.fbq) return;
-            n = f.fbq = function() {
-                n.callMethod ?
-                    n.callMethod.apply(n, arguments) : n.queue.push(arguments)
-            };
-            if (!f._fbq) f._fbq = n;
-            n.push = n;
-            n.loaded = !0;
-            n.version = '2.0';
-            n.queue = [];
-            t = b.createElement(e);
-            t.async = !0;
-            t.src = v;
-            s = b.getElementsByTagName(e)[0];
-            s.parentNode.insertBefore(t, s)
-        }(window, document, 'script',
-            'https://connect.facebook.net/en_US/fbevents.js');
-        fbq('init', '1816595558587562');
-        fbq('track', 'PageView');
-
-    </script>
-    <noscript>
- <img height="1" width="1"
-src="https://www.facebook.com/tr?id=1816595558587562&ev=PageView&noscript=1"/>
-</noscript>
-    <!-- End Facebook Pixel Code -->
+    <!-- End of help Widget script -->
 </head>
 
 <body>
-    <!-- Google Tag Manager (noscript) -->
-    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-W9D5PM3"
-height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <div id="a">
     <!-- End Google Tag Manager (noscript) -->
-    <link rel="stylesheet" href="/css/layout-hanbit.css" />
-    <link rel="stylesheet" href="/css/layout-member.css" />
-    <link rel="stylesheet" href="/css/layout-network.css" />
-    <link rel="stylesheet" href="/css/layout-store.css" />
-    <link rel="stylesheet" href="/css/layout-myhanbit.css" />
-    <link rel="stylesheet" href="/css/layout-event.css" />
+    <link rel="stylesheet" href="../css/layout-angel.css?v=<%=System.currentTimeMillis() %>" />
+    <link rel="stylesheet" href="../css/layout-member.css?v=<%=System.currentTimeMillis() %>" />
+    <link rel="stylesheet" href="../css/layout-network.css?v=<%=System.currentTimeMillis() %>" />
+    <link rel="stylesheet" href="../css/layout-store.css?v=<%=System.currentTimeMillis() %>" />
+    <link rel="stylesheet" href="../css/layout-myhanbit.css?v=<%=System.currentTimeMillis() %>" />
+    <link rel="stylesheet" href="../css/layout-event.css?v=<%=System.currentTimeMillis() %>" />
     <!-- 메뉴 바로가기 -->
     <div id="quick_skip_menu">
         <a href="#gnb" onclick="document.getElementById('gnb').tabIndex = -1;document.getElementById('gnb').focus();return false;"><span>메뉴 바로가기</span></a>
@@ -158,13 +106,11 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <div id="wrap_nav">
                 <ul class="top_brand">
                     <li><a href="http://www.hanbit.co.kr/index.html" name="hanbit_network"><span>HOME</span></a></li>
-                    <li><a href="http://www.hanbit.co.kr/media/">한빛미디어</a></li>
-                    <li><a href="http://www.hanbit.co.kr/academy/">한빛아카데미</a></li>
-                    <li><a href="http://www.hanbit.co.kr/biz/">한빛비즈</a></li>
-                    <li><a href="http://www.hanbit.co.kr/life/">한빛라이프</a></li>
-                    <li><a href="http://www.hanbit.co.kr/edu/">한빛에듀</a></li>
-                    <li><a href="http://www.hanbit.co.kr/realtime/">리얼타임</a></li>
-                    <li><a href="http://www.hanbit.co.kr/textbook/">한빛정보교과서</a></li>
+                    <li><a href="http://www.hanbit.co.kr/media/">신승엽</a></li>
+                    <li><a href="http://www.hanbit.co.kr/academy/">송은정</a></li>
+                    <li><a href="http://www.hanbit.co.kr/biz/">박재오</a></li>
+                    <li><a href="http://www.hanbit.co.kr/life/">임지호</a></li>
+                    <li><a href="http://www.hanbit.co.kr/edu/">김관현</a></li>
                 </ul>
 
                 <ul class="top_menu">
@@ -558,7 +504,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 			NOTICE :
 		</span>
 
-            <a href="/support/notice_view.html?hnb_idx=261">한빛출판네트워크 본사 사옥이전 안내</a>
+            <a href="../support/notice_view.html?hnb_idx=261">엔젤스터디 사이트 제작 안내</a>
         </div>
         <!-- //공지사항 -->
 
@@ -645,7 +591,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <!-- 공통 JS 호출 -->
     <script type="text/javascript" src="/js/common.js"></script>
     <!-- //공통 JS 호출 -->
-
+    </div>
 </body>
 
 </html>
